# Boiling-Point

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/actions/setup-rust/: action.yml
.github/workflows/: bench.yml  ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
agent-harness/: README.md  package.json
agent-harness/scripts/: probe-agent.ts
agent-harness/src/: auth.ts  cli.ts  runner.ts
agent-harness/src/agent/: actions.ts  context.ts  difficulty.ts  prompt.ts  session.ts  tool-names.ts  tools.ts
agent-harness/src/net/: connection.ts  secret-boundary.ts  view-model.ts  wave-lifecycle.ts
agent-harness/src/personas/: archetypes.ts  emotes.ts
agent-harness/src/protocol/: codec.ts  messages.ts
agent-harness/src/timeliness/: fallback.ts
agent-harness/test/: blunder.test.ts  context-gating.test.ts  difficulty.test.ts  emotes.test.ts  fallback.test.ts  view-model.test.ts  wave-lifecycle.test.ts
archive/: README.md
archive/agent-harness/: README.md  package-lock.json  tsconfig.json
archive/agent-harness/scripts/: gen-protocol-types.ts  probe-agent.ts
archive/agent-harness/src/: cli.ts  runner.ts
archive/agent-harness/test/: fallback.test.ts  secret-boundary.test.ts
archive/bot-harness/: README.md
archive/bot-harness/src/: bot.rs  main.rs  model.rs  report.rs  transport.rs
archive/tui-client/: Cargo.toml  README.md
archive/tui-client/src/: app.rs  fixtures.rs  lib.rs  palette.rs  view.rs
archive/tui-client/tests/: snapshots.rs
bench/: README.md
bench/balance-study/: Cargo.toml
bench/balance-study/src/: config.rs  lib.rs  main.rs  metrics.rs  report.rs  runner.rs
bench/balance-study/studies/: explosion-band.toml
bench/balance-study/tests/: reproducibility.rs
bench/dashboard/: Cargo.toml
bench/dashboard/src/: criterion.rs  history.rs  lib.rs  main.rs  render.rs
bot-harness/: Cargo.toml  README.md
bot-harness/src/: bot.rs  lib.rs  main.rs  model.rs  report.rs  rng.rs  runner.rs  stats.rs  strategy.rs  transport.rs
bot-harness/tests/: validation.rs
clients/ai/: Cargo.toml  README.md
clients/ai/specs/: compounding-sample.toml  deck-archetype-sweep.toml  deck-archetype-vs-field.toml
clients/ai/src/: brain.rs  filler.rs  lib.rs  observe.rs  policy.rs  seat.rs  transport.rs  view.rs
clients/ai/src/agent/: api.rs  mod.rs  prompt.rs  schema.rs
clients/ai/src/bot/: decks.rs  mod.rs  rng.rs
clients/ai/src/harness/: mod.rs  rating_sim.rs  report.rs  runner.rs  spec.rs  stats.rs
clients/ai/tests/: harness_validation.rs  seat_filler_e2e.rs
docs/: 01_getting-started.md  02_game-design.md  05_roadmap.md  06_depth-and-complexity.md  07_design-system.md  07_toward-a-v2-core.md  README.md  depth-and-complexity.md  game-design.md  getting-started.md  index.md  naming-ideas.md  roadmap.md
docs/03_architecture/: 01_overview.md  02_server-infrastructure.md  03_tech-stack-exploration.md  04_span-schema-contract.md  05_identity-and-rating.md  index.md
docs/04_reviews/: 01_release-readiness-review.md  02_server-review.md  03_tui-client-review.md  04_agent-harness-review.md  index.md
docs/06_boom2/: 01_depth-and-complexity.md  02_toward-a-v2-core.md  index.md
docs/99_archive/: index.md  naming-ideas.md
docs/architecture/: overview.md  server-architecture.md  tech-stack-exploration.md
docs/reviews/: agent-harness-review.md  release-readiness-review.md  server-review.md  tui-client-review.md
docs/ui-explorations/: boiling-point-tui.html  boiling-point-ui.html
knowledge/: game-design.md  server-review.md  span-schema-contract.md  v2-roadmap.md
knowledge/brainstorming/: game-design-initial.md  game-design-v2.md  initial-game-design.md  server-architecture.md  tech-stack-exploration.md
openspec/changes/admin-ui/: design.md  proposal.md  tasks.md
openspec/changes/adopt-pixi-client/: design.md  proposal.md  research.md  tasks.md
openspec/changes/agent-player-harness/: design.md  tasks.md
openspec/changes/boom2-ai-client/: design.md  proposal.md  tasks.md
openspec/changes/boom2-apothecary/: design.md  proposal.md  tasks.md
openspec/changes/boom2-benchmarking/: design.md  proposal.md  research.md  tasks.md
openspec/changes/boom2-brewers/: design.md  proposal.md  tasks.md
openspec/changes/boom2-combat-core/: design.md  proposal.md  tasks.md
openspec/changes/boom2-compounding/: design.md  proposal.md  tasks.md
ops/: README.md
ops/grafana/: docker-compose.yml  prometheus.yml
protocol/: Cargo.toml  README.md
protocol/src/: account.rs  client.rs  codec.rs  frame.rs  ids.rs  lib.rs  server.rs  vocab.rs
scripts/: playtest.sh
server/: Cargo.toml  README.md  content.toml
server/benches/: engine.rs
server/migrations/: 0001_init.sql  0002_accounts_and_ratings.sql  0002_replays.sql
server/src/: config.rs  headless.rs  lib.rs  main.rs  observability.rs  persistence.rs  rating.rs  replay.rs  session.rs  transport.rs
server/src/admin/: api.rs  auth.rs  mod.rs  projection.rs
server/src/admin/web/: app.js  index.html  style.css
server/src/content/: card.rs  effect.rs  mod.rs  modifier.rs  registry.rs  spell.rs
server/src/game/: brewers.rs  card.rs  compounding.rs  deathmatch.rs  deck.rs  mod.rs  modifiers.rs  pot.rs  realizer.rs  resolve.rs  round.rs  runner.rs  scoring.rs  spells.rs  state.rs
server/src/lobby/: accounts.rs  codes.rs  group.rs  matchmaking.rs  mod.rs  policy.rs  registry.rs  room.rs  session.rs  verifiers.rs
server/src/observability/: balance_metrics.rs  lifecycle.rs  redact.rs  span_schema.rs
server/tests/: admin_e2e.rs  boom_e2e.rs  decision_frames.rs  lifecycle_log_level.rs
specs/001-game-design/: data-model.md  plan.md  quickstart.md  research.md  spec.md
tui-client/: Cargo.toml  README.md
tui-client/examples/: gallery.rs
tui-client/src/: app.rs  clipboard.rs  fixtures.rs  lib.rs  main.rs  net.rs  palette.rs  replay.rs  term.rs  ui.rs  view.rs
tui-client/tests/: live_server.rs  snapshots.rs
(+212 files in other folders)
