# Boiling Point — cargo workspace.
#
# `protocol/` is the narrow wire waist (DTOs + codec, no secrets); `server/` is
# the authoritative engine that owns the full domain model. `tui-client/` is the
# terminal client — an untrusted renderer over `protocol/` (no game logic, no
# secrets). `bot-harness/` is the Layer-1 headless balance harness that drives the
# server over the same public protocol a real client uses (the
# `bot-balance-harness` change).
[workspace]
resolver = "2"
members = ["protocol", "server", "tui-client", "bot-harness"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

# Shared dependency versions, referenced by member crates via `workspace = true`.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"

# Workspace-wide lints. `missing_docs` enforces Constraint #5 (a purpose
# doc-comment on every module, type, and public fn). Set to `warn` so a single
# undocumented field never blocks a build; tighten to `deny` once docs are total.
[workspace.lints.rust]
missing_docs = "warn"
