# Boiling Point — cargo workspace.
#
# `protocol/` is the narrow wire waist (DTOs + codec, no secrets); `server/` is
# the authoritative engine that owns the full domain model; `bot-harness/` is the
# headless balance harness (revived from `archive/` for the boom2 rework —
# Principle IV's at-scale playtesting mandate). Remaining retired v1 components
# (tui-client, agent-harness) live under `archive/` — excluded, not members; see
# archive/README.md for the revival recipe.
[workspace]
resolver = "2"
members = ["protocol", "server", "bot-harness"]
exclude = ["archive"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

# Shared dependency versions, referenced by member crates via `workspace = true`.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
# Command-line parsing for the server binary. The derive feature lets the
# binary declare its args as a documented struct.
clap = { version = "4", features = ["derive"] }

# Workspace-wide lints. `missing_docs` enforces Constraint #5 (a purpose
# doc-comment on every module, type, and public fn). Set to `warn` so a single
# undocumented field never blocks a build; tighten to `deny` once docs are total.
[workspace.lints.rust]
missing_docs = "warn"
