[package]
name = "boiling-point-server"
description = "Boiling Point authoritative game server: owns the full domain model (incl. secrets) and the game loop."
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "boiling_point_server"
path = "src/lib.rs"

[[bin]]
name = "boiling-point-server"
path = "src/main.rs"

[dependencies]
boiling-point-protocol = { path = "../protocol" }
clap = { workspace = true, features = ["env"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
thiserror = { workspace = true }
uuid = { workspace = true }
rand = "0.8"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.8", features = ["ws"] }
dashmap = "6"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
arc-swap = "1"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
rmp-serde = { workspace = true }
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }

[dev-dependencies]
tokio-tungstenite = "0.24"
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["full"] }
uuid = { workspace = true }
boiling-point-protocol = { path = "../protocol" }
