[package]
name = "boiling-point-tui"
description = "Boiling Point terminal client: an untrusted ratatui renderer over the wire protocol. No game logic, no secrets."
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "boiling_point_tui"
path = "src/lib.rs"

[[bin]]
name = "boiling-point-tui"
path = "src/main.rs"

[dependencies]
boiling-point-protocol = { path = "../protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
